syntax = "proto3";
option java_package = "no.uio.ifi.in2000.team17";
option java_multiple_files = true;

message Thresholds{
    double groundWindSpeed = 1;
    double maxWindSpeed = 2;
    double maxWindShear = 3;
    double cloudFraction = 4;
    double fog = 5;
    double rain = 6;
    double humidity = 7;
    double dewPoint = 8;
    double margin = 9;
}

message Settings{
    int32 maxHeight = 1;
    double lat = 2;
    double lng = 3;
    string time = 4;
    bool graphShowTutorial = 5;
    bool tableShowTutorial = 6;
    bool graphBackgroundSwitch = 7;
}